# broodsac

./: CMakeLists.txt  README.md  build_payloads.ps1  headers.ps1  main.c
infectables/: CMakeLists.txt
infectables/notls/: CMakeLists.txt
infectables/notls/noreloc/: CMakeLists.txt  main.c  main.cpp
infectables/notls/reloc/: CMakeLists.txt  main.c  main.cpp
infectables/tls/: CMakeLists.txt
infectables/tls/noreloc/: CMakeLists.txt  main.c
infectables/tls/reloc/: CMakeLists.txt  main.c  main.cpp
infection/: CMakeLists.txt
infection/asm/: CMakeLists.txt
infection/asm/32/: CMakeLists.txt  main.asm  strings.ps1
infection/asm/64/: CMakeLists.txt  main.asm
infection/c/: CMakeLists.txt  main.c  main.cpp
infector/: CMakeLists.txt  build_payloads.ps1  main.c
infector/c/: CMakeLists.txt  headers.ps1  main.c  main.cpp
payload64/: CMakeLists.txt
src/: infection.asm  infector.cpp
testbins/: CMakeLists.txt
testbins/notls/: CMakeLists.txt
testbins/notls/reloc/: CMakeLists.txt
testbins/tls/: CMakeLists.txt
testbins/tls/noreloc/: main.cpp
testbins/tls/reloc/: main.cpp
